<resources>
    <string name="app_name">Floxx</string>

    <string name="main_button">Floxx now, Floxx forever</string>
    <string name="main_content">Floxx</string>
    <string name="register_header">Registration</string>
    <string name="google_app_id">310379858463</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="standby">&#8230;Please stand by&#8230;</string>
    <string name="group_creation_header">Create a Group</string>
    <string name="search_users">(&#8230;search for someone!)</string>
    <string name="reqs_header">Friends</string>
    <string name="search_header">Add Friends</string>
    <string name="received_header">Pending Friend Requests</string>

    <string name="register_username_prompt">Enter a desired username</string>
    <string name="register_email_prompt">Enter an email address</string>
    <string name="register_password_prompt">Enter a desired password</string>
    <string name="confirm_pw_prompt">Confirm your password</string>
    <string name="register_button">Create account</string>
    <string name="portal_greeting">Meetup Portal</string>
    <string name="eta_default">Waiting for a meeting marker to be placed&#8230;</string>
    <string name="leave_content">Leave meetup</string>

    <string name="hidden_title">Hidden Users</string>
    <string name="creation_confirm">Go to map</string>
    <string name="fs_username_hint">Enter your username</string>
    <string name="fs_password_hint">Enter your password</string>
    <string name="registration_link">Don\'t have an account? Register now!</string>
    <string name="login_link">Sign in</string>
    <string name="register_subtext">Welcome to Floxx!</string>
    <string name="register_desc">You don\'t have a Floxx account!? Don\'t worry, we\'ll fix that
        in no time. Just fill in the fields below and hit the button.</string>
    <string name="firebase_msg">&#8230;Connecting&#8230;</string>

    <string name="up_header">User Portal</string>
    <string name="locn_permission_prompt">Turn location services&#8230;</string>
    <string name="curr_friends_header">Current Friends</string>
    <string name="reqs_subtext">If, you know, you have any. :)</string>
    <string name="gc_subtext">Who do you want to see today?</string>
    <string name="up_back">Back to user portal</string>
    <string name="invitations">Invitations</string>
    <string name="am_subtext">Last chance to back out, man</string>
    <string name="conf_label">Enter your confirmation code here.</string>
    <string name="conf_submit">Submit</string>
    <string name="conf_out">Sign out</string>
</resources>
