<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.floxx.floxx.RegisterActivity"
    android:background="#0099cc">

    <TextView
        android:id="@+id/register_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:text="@string/register_header"
        android:textColor="#242424"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_user"
        android:layout_below="@id/register_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_username_prompt"
        android:background="@drawable/textbox"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_below="@id/register_user"
        android:layout_alignStart="@id/register_user"
        android:layout_alignEnd="@id/register_user"
        android:layout_alignLeft="@id/register_user"
        android:layout_alignRight="@id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_email_prompt"
        android:background="@drawable/textbox"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:layout_below="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/register_user"
        android:layout_alignEnd="@id/register_user"
        android:layout_alignLeft="@id/register_user"
        android:layout_alignRight="@id/register_user"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_password_prompt"
        android:background="@drawable/textbox"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_below="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/register_user"
        android:layout_alignEnd="@id/register_user"
        android:layout_alignLeft="@id/register_user"
        android:layout_alignRight="@id/register_user"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_pw_prompt"
        android:background="@drawable/textbox"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@+id/confirm_password"
        android:layout_centerHorizontal="true"
        android:text="@string/register_button" />
</RelativeLayout>
