<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.floxx.floxx.ConfirmationActivity">

    <ImageView
        android:id="@+id/conf_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_ii" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/conf_label"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="#fff"
        android:labelFor="@+id/conf_entry"
        android:text="@string/conf_label" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conf_entry"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textCapCharacters" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_submit"
        android:id="@+id/conf_submit"
        android:backgroundTint="@color/borange"
        android:layout_below="@id/conf_entry"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_out"
        android:id="@+id/conf_out"
        android:layout_below="@id/conf_submit"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
