<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendListActivity"
    tools:showIn="@layout/activity_friend_list">

    <ImageView
        android:id="@+id/up_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/gradient_dark" />

    <!-- ============ -->
    <!-- Header stuff -->
    <!-- ============ -->

    <View
        android:layout_marginTop="35dp"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/gc_divider1"
        android:background="#fff"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="@dimen/up_side_margin"
        android:layout_marginEnd="@dimen/up_side_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_creation_header"
        android:textSize="40sp"
        android:id="@+id/gc_header"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:layout_below="@id/gc_divider1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/gc_subtext"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gc_header"
        android:textColor="#cecece"
        android:text="@string/gc_subtext"
        android:layout_marginBottom="15dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/gc_subtext"
        android:id="@+id/gc_divider2"
        android:background="#fff"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/up_side_margin"
        android:layout_marginEnd="@dimen/up_side_margin" />

    <!-- ============ -->
    <!-- Main content -->
    <!-- ============ -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_marginStart="@dimen/up_side_margin"
        android:layout_marginEnd="@dimen/up_side_margin"
        android:layout_height="180dp"
        android:layout_below="@+id/gc_divider2"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/button_container">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_confirm"
            android:id="@+id/mapgo"
            android:backgroundTint="#f89b4a" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_back"
            android:id="@+id/up_back"
            android:backgroundTint="#cecece" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invitations"
        android:textColor="#fff"
        android:layout_below="@id/buttons"
        android:layout_centerHorizontal="true"
        android:textSize="21sp"
        android:layout_marginTop="15dp"
        android:id="@+id/meetup_invitations"
        android:layout_marginBottom="5dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_below="@+id/meetup_invitations"
        android:id="@+id/meetup_scroll"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/up_side_margin"
        android:layout_marginEnd="@dimen/up_side_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/meetup_container">
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
